--- a/index.html
+++ b/index.html
@@ -67,6 +67,24 @@
           </div>
         </nav>
       </header>
+      <div class="row">
+        <div class="col">
+          <h1>TV Shows</h1>
+          <div class="dropdown">
+            <button class="btn btn-dark border-light dropdown-toggle" type="button" data-bs-toggle="dropdown">
+              Genres
+            </button>
+            <ul class="dropdown-menu">
+              <li><a class="dropdown-item" href="#">Action</a></li>
+              <li><a class="dropdown-item" href="#">Thriller</a></li>
+              <li><a class="dropdown-item" href="#">Comedy</a></li>
+              <li><a class="dropdown-item" href="#">Romantic</a></li>
+              <li><a class="dropdown-item" href="#">Horror</a></li>
+              <li><a class="dropdown-item" href="#">Documentary</a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
     </div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
