--- a/index.html
+++ b/index.html
@@ -83,7 +83,37 @@
               <li><a class="dropdown-item" href="#">Documentary</a></li>
             </ul>
           </div>
+          <div class="col">
+            <span>icona</span>
+            <span>icona</span>
+          </div>
         </div>
+      </div>
+      <div class="row">
+        <div class="col">
+          <h2>Trending Now</h2>
+        </div>
+      </div>
+      <div id="carosello1" class="carousel slide">
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="..." class="d-block w-100" alt="..." />
+          </div>
+          <div class="carousel-item">
+            <img src="..." class="d-block w-100" alt="..." />
+          </div>
+          <div class="carousel-item">
+            <img src="..." class="d-block w-100" alt="..." />
+          </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
       </div>
     </div>
     <script
