--- a/index.html
+++ b/index.html
@@ -97,20 +97,149 @@
       <div id="carosello1" class="carousel slide">
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="..." class="d-block w-100" alt="..." />
-          </div>
-          <div class="carousel-item">
-            <img src="..." class="d-block w-100" alt="..." />
-          </div>
-          <div class="carousel-item">
-            <img src="..." class="d-block w-100" alt="..." />
+            <div class="row flex-nowrap flex-nowrap">
+              <div class="col-6 col-md-4 col-lg-2">
+                <img
+                  src="https://upload.wikimedia.org/wikipedia/it/thumb/7/77/Shrek_%28film%29.png/1200px-Shrek_%28film%29.png"
+                  class="d-block w-100"
+                  alt="film"
+                />
+              </div>
+              <div class="col-6 col-md-4 col-lg-2">
+                <img
+                  src="https://upload.wikimedia.org/wikipedia/it/thumb/7/77/Shrek_%28film%29.png/1200px-Shrek_%28film%29.png"
+                  class="d-block w-100"
+                  alt="film"
+                />
+              </div>
+              <div class="col-6 col-md-4 col-lg-2">
+                <img
+                  src="https://upload.wikimedia.org/wikipedia/it/thumb/7/77/Shrek_%28film%29.png/1200px-Shrek_%28film%29.png"
+                  class="d-block w-100"
+                  alt="film"
+                />
+              </div>
+              <div class="col-6 col-md-4 col-lg-2">
+                <img
+                  src="https://upload.wikimedia.org/wikipedia/it/thumb/7/77/Shrek_%28film%29.png/1200px-Shrek_%28film%29.png"
+                  class="d-block w-100"
+                  alt="film"
+                />
+              </div>
+              <div class="col-6 col-md-4 col-lg-2">
+                <img
+                  src="https://upload.wikimedia.org/wikipedia/it/thumb/7/77/Shrek_%28film%29.png/1200px-Shrek_%28film%29.png"
+                  class="d-block w-100"
+                  alt="film"
+                />
+              </div>
+              <div class="col-6 col-md-4 col-lg-2">
+                <img
+                  src="https://upload.wikimedia.org/wikipedia/it/thumb/7/77/Shrek_%28film%29.png/1200px-Shrek_%28film%29.png"
+                  class="d-block w-100"
+                  alt="film"
+                />
+              </div>
+            </div>
+            <div class="carousel-item">
+              <div class="row flex-nowrap">
+                <div class="col-6 col-md-4 col-lg-2">
+                  <img
+                    src="https://upload.wikimedia.org/wikipedia/it/thumb/7/77/Shrek_%28film%29.png/1200px-Shrek_%28film%29.png"
+                    class="d-block w-100"
+                    alt="film"
+                  />
+                </div>
+                <div class="col-6 col-md-4 col-lg-2">
+                  <img
+                    src="https://upload.wikimedia.org/wikipedia/it/thumb/7/77/Shrek_%28film%29.png/1200px-Shrek_%28film%29.png"
+                    class="d-block w-100"
+                    alt="film"
+                  />
+                </div>
+                <div class="col-6 col-md-4 col-lg-2">
+                  <img
+                    src="https://upload.wikimedia.org/wikipedia/it/thumb/7/77/Shrek_%28film%29.png/1200px-Shrek_%28film%29.png"
+                    class="d-block w-100"
+                    alt="film"
+                  />
+                </div>
+                <div class="col-6 col-md-4 col-lg-2">
+                  <img
+                    src="https://upload.wikimedia.org/wikipedia/it/thumb/7/77/Shrek_%28film%29.png/1200px-Shrek_%28film%29.png"
+                    class="d-block w-100"
+                    alt="film"
+                  />
+                </div>
+                <div class="col-6 col-md-4 col-lg-2">
+                  <img
+                    src="https://upload.wikimedia.org/wikipedia/it/thumb/7/77/Shrek_%28film%29.png/1200px-Shrek_%28film%29.png"
+                    class="d-block w-100"
+                    alt="film"
+                  />
+                </div>
+                <div class="col-6 col-md-4 col-lg-2">
+                  <img
+                    src="https://upload.wikimedia.org/wikipedia/it/thumb/7/77/Shrek_%28film%29.png/1200px-Shrek_%28film%29.png"
+                    class="d-block w-100"
+                    alt="film"
+                  />
+                </div>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <div class="row flex-nowrap">
+                <div class="col-6 col-md-4 col-lg-2">
+                  <img
+                    src="https://upload.wikimedia.org/wikipedia/it/thumb/7/77/Shrek_%28film%29.png/1200px-Shrek_%28film%29.png"
+                    class="d-block w-100"
+                    alt="film"
+                  />
+                </div>
+                <div class="col-6 col-md-4 col-lg-2">
+                  <img
+                    src="https://upload.wikimedia.org/wikipedia/it/thumb/7/77/Shrek_%28film%29.png/1200px-Shrek_%28film%29.png"
+                    class="d-block w-100"
+                    alt="film"
+                  />
+                </div>
+                <div class="col-6 col-md-4 col-lg-2">
+                  <img
+                    src="https://upload.wikimedia.org/wikipedia/it/thumb/7/77/Shrek_%28film%29.png/1200px-Shrek_%28film%29.png"
+                    class="d-block w-100"
+                    alt="film"
+                  />
+                </div>
+                <div class="col-6 col-md-4 col-lg-2">
+                  <img
+                    src="https://upload.wikimedia.org/wikipedia/it/thumb/7/77/Shrek_%28film%29.png/1200px-Shrek_%28film%29.png"
+                    class="d-block w-100"
+                    alt="film"
+                  />
+                </div>
+                <div class="col-6 col-md-4 col-lg-2">
+                  <img
+                    src="https://upload.wikimedia.org/wikipedia/it/thumb/7/77/Shrek_%28film%29.png/1200px-Shrek_%28film%29.png"
+                    class="d-block w-100"
+                    alt="film"
+                  />
+                </div>
+                <div class="col-6 col-md-4 col-lg-2">
+                  <img
+                    src="https://upload.wikimedia.org/wikipedia/it/thumb/7/77/Shrek_%28film%29.png/1200px-Shrek_%28film%29.png"
+                    class="d-block w-100"
+                    alt="film"
+                  />
+                </div>
+              </div>
+            </div>
           </div>
         </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+        <button class="carousel-control-prev" type="button" data-bs-target="#carosello1" data-bs-slide="prev">
           <span class="carousel-control-prev-icon" aria-hidden="true"></span>
           <span class="visually-hidden">Previous</span>
         </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+        <button class="carousel-control-next" type="button" data-bs-target="#carosello1" data-bs-slide="next">
           <span class="carousel-control-next-icon" aria-hidden="true"></span>
           <span class="visually-hidden">Next</span>
         </button>
