--- a/index.html
+++ b/index.html
@@ -244,6 +244,161 @@
           <span class="visually-hidden">Next</span>
         </button>
       </div>
+      <div class="row">
+        <div class="col">
+          <h2>Watch It Again</h2>
+        </div>
+      </div>
+      <div id="carosello2" class="carousel slide">
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <div class="row flex-nowrap flex-nowrap">
+              <div class="col-6 col-md-4 col-lg-2">
+                <img
+                  src="https://upload.wikimedia.org/wikipedia/it/thumb/7/77/Shrek_%28film%29.png/1200px-Shrek_%28film%29.png"
+                  class="d-block w-100"
+                  alt="film"
+                />
+              </div>
+              <div class="col-6 col-md-4 col-lg-2">
+                <img
+                  src="https://upload.wikimedia.org/wikipedia/it/thumb/7/77/Shrek_%28film%29.png/1200px-Shrek_%28film%29.png"
+                  class="d-block w-100"
+                  alt="film"
+                />
+              </div>
+              <div class="col-6 col-md-4 col-lg-2">
+                <img
+                  src="https://upload.wikimedia.org/wikipedia/it/thumb/7/77/Shrek_%28film%29.png/1200px-Shrek_%28film%29.png"
+                  class="d-block w-100"
+                  alt="film"
+                />
+              </div>
+              <div class="col-6 col-md-4 col-lg-2">
+                <img
+                  src="https://upload.wikimedia.org/wikipedia/it/thumb/7/77/Shrek_%28film%29.png/1200px-Shrek_%28film%29.png"
+                  class="d-block w-100"
+                  alt="film"
+                />
+              </div>
+              <div class="col-6 col-md-4 col-lg-2">
+                <img
+                  src="https://upload.wikimedia.org/wikipedia/it/thumb/7/77/Shrek_%28film%29.png/1200px-Shrek_%28film%29.png"
+                  class="d-block w-100"
+                  alt="film"
+                />
+              </div>
+              <div class="col-6 col-md-4 col-lg-2">
+                <img
+                  src="https://upload.wikimedia.org/wikipedia/it/thumb/7/77/Shrek_%28film%29.png/1200px-Shrek_%28film%29.png"
+                  class="d-block w-100"
+                  alt="film"
+                />
+              </div>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <div class="row flex-nowrap">
+              <div class="col-6 col-md-4 col-lg-2">
+                <img
+                  src="https://upload.wikimedia.org/wikipedia/it/thumb/7/77/Shrek_%28film%29.png/1200px-Shrek_%28film%29.png"
+                  class="d-block w-100"
+                  alt="film"
+                />
+              </div>
+              <div class="col-6 col-md-4 col-lg-2">
+                <img
+                  src="https://upload.wikimedia.org/wikipedia/it/thumb/7/77/Shrek_%28film%29.png/1200px-Shrek_%28film%29.png"
+                  class="d-block w-100"
+                  alt="film"
+                />
+              </div>
+              <div class="col-6 col-md-4 col-lg-2">
+                <img
+                  src="https://upload.wikimedia.org/wikipedia/it/thumb/7/77/Shrek_%28film%29.png/1200px-Shrek_%28film%29.png"
+                  class="d-block w-100"
+                  alt="film"
+                />
+              </div>
+              <div class="col-6 col-md-4 col-lg-2">
+                <img
+                  src="https://upload.wikimedia.org/wikipedia/it/thumb/7/77/Shrek_%28film%29.png/1200px-Shrek_%28film%29.png"
+                  class="d-block w-100"
+                  alt="film"
+                />
+              </div>
+              <div class="col-6 col-md-4 col-lg-2">
+                <img
+                  src="https://upload.wikimedia.org/wikipedia/it/thumb/7/77/Shrek_%28film%29.png/1200px-Shrek_%28film%29.png"
+                  class="d-block w-100"
+                  alt="film"
+                />
+              </div>
+              <div class="col-6 col-md-4 col-lg-2">
+                <img
+                  src="https://upload.wikimedia.org/wikipedia/it/thumb/7/77/Shrek_%28film%29.png/1200px-Shrek_%28film%29.png"
+                  class="d-block w-100"
+                  alt="film"
+                />
+              </div>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <div class="row flex-nowrap">
+              <div class="col-6 col-md-4 col-lg-2">
+                <img
+                  src="https://upload.wikimedia.org/wikipedia/it/thumb/7/77/Shrek_%28film%29.png/1200px-Shrek_%28film%29.png"
+                  class="d-block w-100"
+                  alt="film"
+                />
+              </div>
+              <div class="col-6 col-md-4 col-lg-2">
+                <img
+                  src="https://upload.wikimedia.org/wikipedia/it/thumb/7/77/Shrek_%28film%29.png/1200px-Shrek_%28film%29.png"
+                  class="d-block w-100"
+                  alt="film"
+                />
+              </div>
+              <div class="col-6 col-md-4 col-lg-2">
+                <img
+                  src="https://upload.wikimedia.org/wikipedia/it/thumb/7/77/Shrek_%28film%29.png/1200px-Shrek_%28film%29.png"
+                  class="d-block w-100"
+                  alt="film"
+                />
+              </div>
+              <div class="col-6 col-md-4 col-lg-2">
+                <img
+                  src="https://upload.wikimedia.org/wikipedia/it/thumb/7/77/Shrek_%28film%29.png/1200px-Shrek_%28film%29.png"
+                  class="d-block w-100"
+                  alt="film"
+                />
+              </div>
+              <div class="col-6 col-md-4 col-lg-2">
+                <img
+                  src="https://upload.wikimedia.org/wikipedia/it/thumb/7/77/Shrek_%28film%29.png/1200px-Shrek_%28film%29.png"
+                  class="d-block w-100"
+                  alt="film"
+                />
+              </div>
+              <div class="col-6 col-md-4 col-lg-2">
+                <img
+                  src="https://upload.wikimedia.org/wikipedia/it/thumb/7/77/Shrek_%28film%29.png/1200px-Shrek_%28film%29.png"
+                  class="d-block w-100"
+                  alt="film"
+                />
+              </div>
+            </div>
+          </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carosello2" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carosello2" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+      </div>
     </div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
