--- a/index.html
+++ b/index.html
@@ -563,5 +563,36 @@
   </body>
   <footer class="container">
     <div>icone</div>
+    <div class="row">
+      <div class="col-3">
+        <ul class="px-0">
+          <li><a href="#">Audio and Subtitles</a></li>
+          <li><a href="#">Media Center</a></li>
+          <li><a href="#">Privacy</a></li>
+          <li><a href="#">Contact Us</a></li>
+        </ul>
+      </div>
+      <div class="col-3">
+        <ul class="px-0">
+          <li><a href="#">Audio Description</a></li>
+          <li><a href="#">Investor Relations</a></li>
+          <li><a href="#">Legal Notices</a></li>
+        </ul>
+      </div>
+      <div class="col-3">
+        <ul class="px-0">
+          <li><a href="#">Help Center</a></li>
+          <li><a href="#">Jobs</a></li>
+          <li><a href="#">Cookie Preferences</a></li>
+        </ul>
+      </div>
+      <div class="col-3">
+        <ul class="px-0">
+          <li><a href="#">Gift Cards</a></li>
+          <li><a href="#">Terms of Use</a></li>
+          <li><a href="#">Corporate Information</a></li>
+        </ul>
+      </div>
+    </div>
   </footer>
 </html>
