--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="./assets/css/style.css" />
   </head>
   <body class="bg-dark text-light">
-    <div class="container-fluid px-0">
+    <div class="container px-0">
       <header>
         <nav class="navbar navbar-expand-lg bg-body-dark">
           <div class="container-fluid px-0">
@@ -86,23 +86,30 @@
       </header>
       <div class="row text-light">
         <div class="col">
-          <h1 class="fs-3">TV Shows</h1>
-          <div class="dropdown">
-            <button class="btn btn-dark border-light dropdown-toggle mx-2" type="button" data-bs-toggle="dropdown">
-              Genres
-            </button>
-            <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="#">Action</a></li>
-              <li><a class="dropdown-item" href="#">Thriller</a></li>
-              <li><a class="dropdown-item" href="#">Comedy</a></li>
-              <li><a class="dropdown-item" href="#">Romantic</a></li>
-              <li><a class="dropdown-item" href="#">Horror</a></li>
-              <li><a class="dropdown-item" href="#">Documentary</a></li>
-            </ul>
+          <div class="d-flex">
+            <h1 class="fs-3 fw-bold">TV Shows</h1>
+            <div class="dropdown">
+              <button
+                class="btn btn-dark border-light dropdown-toggle mx-2 rounded-0 bg-black"
+                type="button"
+                data-bs-toggle="dropdown"
+              >
+                Genres
+              </button>
+              <ul class="dropdown-menu">
+                <li><a class="dropdown-item" href="#">Action</a></li>
+                <li><a class="dropdown-item" href="#">Thriller</a></li>
+                <li><a class="dropdown-item" href="#">Comedy</a></li>
+                <li><a class="dropdown-item" href="#">Romantic</a></li>
+                <li><a class="dropdown-item" href="#">Horror</a></li>
+                <li><a class="dropdown-item" href="#">Documentary</a></li>
+              </ul>
+            </div>
           </div>
+
           <div class="col d-flex align-items-center justify-content-end">
-            <span class="px-2 border border-light"><i class="bi bi-text-left"></i></span>
-            <span class="px-2 border border-light"><i class="bi bi-grid-fill"></i></span>
+            <span class="px-2 border border-white"><i class="bi bi-text-left"></i></span>
+            <span class="px-2 border border-secondary"><i class="bi bi-grid-fill"></i></span>
           </div>
         </div>
       </div>
@@ -578,10 +585,15 @@
       crossorigin="anonymous"
     ></script>
   </body>
-  <footer class="container">
-    <div>icone</div>
+  <footer class="container w-50 text-secondary">
+    <div class="d-flex justify-content-start w-100 gap-2">
+      <i class="bi bi-facebook"></i>
+      <i class="bi bi-instagram"></i>
+      <i class="bi bi-twitter"></i>
+      <i class="bi bi-youtube"></i>
+    </div>
     <div class="row">
-      <div class="col-3">
+      <div class="col-6 col-md-3">
         <ul class="px-0">
           <li><a href="#">Audio and Subtitles</a></li>
           <li><a href="#">Media Center</a></li>
@@ -589,21 +601,21 @@
           <li><a href="#">Contact Us</a></li>
         </ul>
       </div>
-      <div class="col-3">
+      <div class="col-6 col-md-3">
         <ul class="px-0">
           <li><a href="#">Audio Description</a></li>
           <li><a href="#">Investor Relations</a></li>
           <li><a href="#">Legal Notices</a></li>
         </ul>
       </div>
-      <div class="col-3">
+      <div class="col-6 col-md-3">
         <ul class="px-0">
           <li><a href="#">Help Center</a></li>
           <li><a href="#">Jobs</a></li>
           <li><a href="#">Cookie Preferences</a></li>
         </ul>
       </div>
-      <div class="col-3">
+      <div class="col-6 col-md-3">
         <ul class="px-0">
           <li><a href="#">Gift Cards</a></li>
           <li><a href="#">Terms of Use</a></li>
@@ -611,7 +623,7 @@
         </ul>
       </div>
       <div>
-        <button type="button" class="btn btn-outline-secondary bg-dark mb-3">Service Code</button>
+        <button type="button" class="btn btn-outline-secondary bg-dark mb-3 rounded-0">Service Code</button>
       </div>
       <p>&copy; 1997-2019 Netflix, Inc {i-0d00fcda2fdf9c0de}</p>
     </div>
