--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
                   </a>
 
                   <ul class="dropdown-menu dropdown-menu-end">
-                    <li><a class="dropdown-item" href="/edit_profile.html">Edit Profile</a></li>
-                    <li><a class="dropdown-item" href="/settings.html">Settings</a></li>
+                    <li><a class="dropdown-item" href="edit_profile.html">Edit Profile</a></li>
+                    <li><a class="dropdown-item" href="settings.html">Settings</a></li>
                     <li><a class="dropdown-item" href="https://www.netflix.com/">Logout</a></li>
                   </ul>
                 </div>
