--- a/edit_profile.html
+++ b/edit_profile.html
@@ -13,8 +13,30 @@
     />
     <link rel="stylesheet" href="./assets/css/style.css" />
   </head>
-  <body>
-    <h1>EDIT PROFILE</h1>
+  <body class="bg-dark text-light">
+    <div class="container-fluid">
+      <header>
+        <nav class="row">
+          <div class="col">
+            <a href="index.html"><img src="./assets/netflix_logo.png" alt="logo" width="100px" /></a>
+          </div>
+        </nav>
+      </header>
+    </div>
+    <div class="container w-50 mt-5">
+      <h1>EDIT PROFILE</h1>
+      <hr />
+      <div class="row">
+        <div class="col-3 px-0 position-relative">
+          <img class="img-fluid" src="./assets/avatar.png" alt="propic" />
+          <div
+            class="bg-black position-absolute rounded-circle matita d-flex justify-content-center align-items-center"
+          >
+            <i class="bi bi-pencil-fill"></i>
+          </div>
+        </div>
+      </div>
+    </div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
