--- a/edit_profile.html
+++ b/edit_profile.html
@@ -31,7 +31,7 @@
         <div class="col-3 px-0 position-relative">
           <img class="img-fluid" src="./assets/avatar.png" alt="propic" />
           <div
-            class="bg-black position-absolute rounded-circle matita d-flex justify-content-center align-items-center"
+            class="bg-black position-absolute rounded-circle matita d-flex justify-content-center align-items-center bottom-0 left-0 m-2 border border-light border-1"
           >
             <i class="bi bi-pencil-fill"></i>
           </div>
