--- a/index.html
+++ b/index.html
@@ -228,11 +228,21 @@
             </div>
           </div>
         </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carosello1" data-bs-slide="prev">
+        <button
+          class="carousel-control-prev position-absolute start-0 top-50 translate-middle"
+          type="button"
+          data-bs-target="#carosello1"
+          data-bs-slide="prev"
+        >
           <span class="carousel-control-prev-icon" aria-hidden="true"></span>
           <span class="visually-hidden">Previous</span>
         </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carosello1" data-bs-slide="next">
+        <button
+          class="carousel-control-next position-absolute top-50 start-100 translate-middle"
+          type="button"
+          data-bs-target="#carosello1"
+          data-bs-slide="next"
+        >
           <span class="carousel-control-next-icon" aria-hidden="true"></span>
           <span class="visually-hidden">Next</span>
         </button>
@@ -347,11 +357,21 @@
             </div>
           </div>
         </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carosello2" data-bs-slide="prev">
+        <button
+          class="carousel-control-prev position-absolute start-0 top-50 translate-middle"
+          type="button"
+          data-bs-target="#carosello2"
+          data-bs-slide="prev"
+        >
           <span class="carousel-control-prev-icon" aria-hidden="true"></span>
           <span class="visually-hidden">Previous</span>
         </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carosello2" data-bs-slide="next">
+        <button
+          class="carousel-control-next position-absolute top-50 start-100 translate-middle"
+          type="button"
+          data-bs-target="#carosello2"
+          data-bs-slide="next"
+        >
           <span class="carousel-control-next-icon" aria-hidden="true"></span>
           <span class="visually-hidden">Next</span>
         </button>
@@ -466,11 +486,21 @@
             </div>
           </div>
         </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carosello3" data-bs-slide="prev">
+        <button
+          class="carousel-control-prev position-absolute start-0 top-50 translate-middle"
+          type="button"
+          data-bs-target="#carosello3"
+          data-bs-slide="prev"
+        >
           <span class="carousel-control-prev-icon" aria-hidden="true"></span>
           <span class="visually-hidden">Previous</span>
         </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carosello3" data-bs-slide="next">
+        <button
+          class="carousel-control-next position-absolute top-50 start-100 translate-middle"
+          type="button"
+          data-bs-target="#carosello3"
+          data-bs-slide="next"
+        >
           <span class="carousel-control-next-icon" aria-hidden="true"></span>
           <span class="visually-hidden">Next</span>
         </button>
