--- a/edit_profile.html
+++ b/edit_profile.html
@@ -36,6 +36,9 @@
             <i class="bi bi-pencil-fill"></i>
           </div>
         </div>
+        <div class="col-8">
+          <div class="bg-secondary text-light"></div>
+        </div>
       </div>
     </div>
     <script
