--- a/edit_profile.html
+++ b/edit_profile.html
@@ -27,8 +27,8 @@
     <div class="container w-50 mt-5">
       <h1>EDIT PROFILE</h1>
       <hr />
-      <div class="row">
-        <div class="col-3 px-0 position-relative">
+      <div class="row pt-2 gap-3">
+        <div class="col-2 px-0 position-relative">
           <img class="img-fluid" src="./assets/avatar.png" alt="propic" />
           <div
             class="bg-black position-absolute rounded-circle matita d-flex justify-content-center align-items-center bottom-0 left-0 m-2 border border-light border-1"
@@ -37,7 +37,16 @@
           </div>
         </div>
         <div class="col-8">
-          <div class="bg-secondary text-light"></div>
+          <div class="bg-secondary px-2 py-1 fs-5">Strive Student</div>
+          <p class="text-secondary fs-5 mt-5">Language:</p>
+          <select class="bg-black rounded-0 text-light" name="Language" id="Language">
+            <option value="English">English</option>
+            <option value="Italiano">Italiano</option>
+            <option value="Shqip">Shqip</option>
+          </select>
+          <hr />
+          <p class="text-secondary fs-5">Maturity Settings:</p>
+          <button class="text-light darker border-0 p-1">ALL MATURITY RATINGS</button>
         </div>
       </div>
     </div>
