--- a/edit_profile.html
+++ b/edit_profile.html
@@ -28,12 +28,14 @@
       <h1>EDIT PROFILE</h1>
       <hr />
       <div class="row pt-2 gap-3">
-        <div class="col-2 px-0 position-relative">
-          <img class="img-fluid" src="./assets/avatar.png" alt="propic" />
-          <div
-            class="bg-black position-absolute rounded-circle matita d-flex justify-content-center align-items-center bottom-0 left-0 m-2 border border-light border-1"
-          >
-            <i class="bi bi-pencil-fill"></i>
+        <div class="col-2 px-0">
+          <div class="px-0 position-relative">
+            <img class="img-fluid" src="./assets/avatar.png" alt="propic" />
+            <div
+              class="bg-black position-absolute rounded-circle matita d-flex justify-content-center align-items-center bottom-0 left-0 m-2 border border-light border-1"
+            >
+              <i class="bi bi-pencil-fill"></i>
+            </div>
           </div>
         </div>
         <div class="col-8">
@@ -46,7 +48,10 @@
           </select>
           <hr />
           <p class="text-secondary fs-5">Maturity Settings:</p>
-          <button class="text-light darker border-0 p-1">ALL MATURITY RATINGS</button>
+          <button class="text-light darker border-0 p-1 mb-3">ALL MATURITY RATINGS</button>
+          <p>Show titles of <b>all maturity ratings</b> for this profile</p>
+          <button class="border border-secondary text-secondary bg-dark px-3">EDIT</button>
+          <hr />
         </div>
       </div>
     </div>
