--- a/edit_profile.html
+++ b/edit_profile.html
@@ -28,7 +28,7 @@
       <h1>EDIT PROFILE</h1>
       <hr />
       <div class="row pt-2 gap-3">
-        <div class="col-2 px-0">
+        <div class="col-12 col-md-2 px-0">
           <div class="px-0 position-relative">
             <img class="img-fluid" src="./assets/avatar.png" alt="propic" />
             <div
@@ -38,7 +38,7 @@
             </div>
           </div>
         </div>
-        <div class="col-8">
+        <div class="col-12 col-md-8 px-0">
           <div class="bg-secondary px-2 py-1 fs-5">Strive Student</div>
           <p class="text-secondary fs-5 mt-5">Language:</p>
           <select class="bg-black rounded-0 text-light" name="Language" id="Language">
@@ -52,8 +52,15 @@
           <p>Show titles of <b>all maturity ratings</b> for this profile</p>
           <button class="border border-secondary text-secondary bg-dark px-3">EDIT</button>
           <hr />
+          <p class="text-secondary fs-5">Autoplay Controls</p>
+          <input type="checkbox" id="next" />
+          <label for="next">Autoplay next episode in a series on all devices</label>
+          <br />
+          <input type="checkbox" />
+          <label for="next">Autoplay previews while browsing on all devices</label>
         </div>
       </div>
+      <hr />
     </div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
