--- a/edit_profile.html
+++ b/edit_profile.html
@@ -61,6 +61,11 @@
         </div>
       </div>
       <hr />
+      <div class="d-flex">
+        <button>SAVE</button>
+        <button>CANCEL</button>
+        <button>DELETE PROFILE</button>
+      </div>
     </div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
