--- a/edit_profile.html
+++ b/edit_profile.html
@@ -61,10 +61,12 @@
         </div>
       </div>
       <hr />
-      <div class="d-flex">
-        <button>SAVE</button>
-        <button>CANCEL</button>
-        <button>DELETE PROFILE</button>
+      <div class="row">
+        <div class="d-flex justify-content-between col-10 flex-start">
+          <button>SAVE</button>
+          <button>CANCEL</button>
+          <button>DELETE PROFILE</button>
+        </div>
       </div>
     </div>
     <script
