--- a/index.html
+++ b/index.html
@@ -513,7 +513,7 @@
     ></script>
   </body>
   <footer class="container w-50 text-secondary">
-    <div class="d-flex justify-content-start w-100 gap-2">
+    <div class="d-flex justify-content-start w-100 gap-2 fs-5 mt-5">
       <i class="bi bi-facebook"></i>
       <i class="bi bi-instagram"></i>
       <i class="bi bi-twitter"></i>
