--- a/edit_profile.html
+++ b/edit_profile.html
@@ -48,7 +48,7 @@
           </select>
           <hr />
           <p class="text-secondary fs-5">Maturity Settings:</p>
-          <button class="text-light darker border-0 p-1 mb-3">ALL MATURITY RATINGS</button>
+          <button class="text-light darker border-0 px-3 py-1 mb-3">ALL MATURITY RATINGS</button>
           <p>Show titles of <b>all maturity ratings</b> for this profile</p>
           <button class="border border-secondary text-secondary bg-dark px-3">EDIT</button>
           <hr />
