--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <header>
         <nav class="navbar navbar-expand-lg bg-body-dark">
           <div class="container-fluid px-0">
-            <a class="navbar-brand" href="#"><img src="./assets/netflix_logo.png" alt="logo" width="100px" /></a>
+            <a class="navbar-brand" href="#"><img src="./assets/netflix_logo.png" alt="logo" class="logo" /></a>
             <button
               class="navbar-toggler"
               type="button"
@@ -62,7 +62,7 @@
                   />
                 </form>
                 <span class="mx-2"
-                  ><a href="#"><img src="./assets/kids_icon.png" alt="kids" width="25px" /></a
+                  ><a href="#"><img src="./assets/kids_icon.png" alt="kids" class="logo" /></a
                 ></span>
                 <span class="mx-2"
                   ><a href="#"><i class="bi bi-bell-fill"></i></a
@@ -75,7 +75,7 @@
                     data-bs-toggle="dropdown"
                     aria-expanded="false"
                   >
-                    <img src="./assets/avatar.png" alt="propic" width="25px" />
+                    <img src="./assets/avatar.png" alt="propic" class="logo" />
                   </a>
 
                   <ul class="dropdown-menu dropdown-menu-end">
