si può ancora migliorare, ma penso che ora vada abbastanza bene

--- a/settings.html
+++ b/settings.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="./assets/css/style.css" />
   </head>
   <body>
-    <div class="container-fluid px-2">
+    <div class="container-fluid px-2 settingsPage">
       <header>
         <nav class="navbar navbar-expand-lg bg-black text-light">
           <div class="container-fluid px-0">
@@ -127,22 +127,67 @@
                 <p>Billing details</p>
               </div>
             </div>
+            <hr />
+            <div class="row">
+              <div class="col text-end text-primary">
+                <p>Redeem gift card or promo code</p>
+                <p>Where to buy gift cards</p>
+              </div>
+            </div>
           </div>
         </div>
         <hr />
         <div class="row">
           <div class="col-3">PLAN DETAILS</div>
-          <div class="col"></div>
+          <div class="col">
+            <div class="row">
+              <div class="col text-start text-black">
+                <p class="fw-bold">
+                  Premium
+                  <span><img src="./assets/4NCFBAA.png" alt="logo" class="logo" /></span>
+                </p>
+              </div>
+              <div class="col text-end text-primary"><p>Change plan</p></div>
+            </div>
+          </div>
         </div>
         <hr />
         <div class="row">
           <div class="col-3">SETTINGS</div>
-          <div class="col"></div>
+          <div class="col text-start text-primary">
+            <p>Parental controls</p>
+            <p>Test Participation</p>
+            <p>Manage download services</p>
+            <p>Activate a device</p>
+            <p>Recent device streaming activity</p>
+            <p>Sign out of all devices</p>
+          </div>
         </div>
         <hr />
         <div class="row">
           <div class="col-3">MY PROFILE</div>
-          <div class="col"></div>
+          <div class="col">
+            <div class="row">
+              <div class="col text-start text-black fw-bold">
+                <span><img src="./assets/avatar.png" alt="propic" class="logo" /></span> Strive Student
+              </div>
+              <div class="col text-end text-primary">
+                <p>manage profiles</p>
+                <p>Add profile email</p>
+              </div>
+            </div>
+            <div class="row text-primary">
+              <div class="col text-start">
+                <p>Language</p>
+                <p>Playback settings</p>
+                <p>Subtitle Appearance</p>
+              </div>
+              <div class="col text-start">
+                <p>Viewing activity</p>
+                <p>Ratings</p>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
